--- a/css/output.css
+++ b/css/output.css
@@ -323,7 +323,7 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-scale-y: 1;
   --tw-transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
-.border, .border-b-2, .border-b-4, .hover\:border-2, .hover\:border-l-4, .xl\:border{
+.border-b-2, .border-b-4, .hover\:border-2, .hover\:border-l-4, .xl\:border{
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
@@ -342,35 +342,17 @@ h1 {
 .top-1{
   top: 0.25rem;
 }
-.right-0{
-  right: 0px;
-}
-.-right-20{
-  right: -5rem;
-}
 .left-0{
   left: 0px;
 }
 .top-20{
   top: 5rem;
 }
-.top-44{
-  top: 11rem;
-}
-.left-1\/4{
-  left: 25%;
-}
 .right-4{
   right: 1rem;
 }
 .top-3{
   top: 0.75rem;
-}
-.right-14{
-  right: 3.5rem;
-}
-.top-97{
-  top: 28rem;
 }
 .z-30{
   z-index: 30;
@@ -379,19 +361,25 @@ h1 {
   margin-top: 6px;
   margin-bottom: 6px;
 }
-.mx-24{
-  margin-left: 6rem;
-  margin-right: 6rem;
-}
 .mx-16{
   margin-left: 4rem;
   margin-right: 4rem;
 }
-.ml-5{
-  margin-left: 1.25rem;
+.mx-4{
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
-.ml-auto{
-  margin-left: auto;
+.mx-8{
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
+.mx-6{
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
+.mx-10{
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
 }
 .mb-4{
   margin-bottom: 1rem;
@@ -401,6 +389,9 @@ h1 {
 }
 .mt-5{
   margin-top: 1.25rem;
+}
+.ml-auto{
+  margin-left: auto;
 }
 .block{
   display: block;
@@ -420,8 +411,11 @@ h1 {
 .h-14{
   height: 3.5rem;
 }
-.h-full{
-  height: 100%;
+.h-auto{
+  height: auto;
+}
+.h-\[640px\]{
+  height: 640px;
 }
 .w-screen{
   width: 100vw;
@@ -429,32 +423,56 @@ h1 {
 .w-2\/3{
   width: 66.666667%;
 }
-.w-1\/3{
-  width: 33.333333%;
-}
-.w-80{
-  width: 20rem;
+.w-full{
+  width: 100%;
 }
 .w-1\/2{
   width: 50%;
 }
-.w-24{
-  width: 6rem;
-}
 .w-9{
   width: 2.25rem;
 }
-.w-5\/12{
-  width: 41.666667%;
+.w-1\/3{
+  width: 33.333333%;
 }
-.w-full{
-  width: 100%;
+.w-4\/12{
+  width: 33.333333%;
+}
+.w-2\/12{
+  width: 16.666667%;
+}
+.w-3\/12{
+  width: 25%;
+}
+.w-3\/4{
+  width: 75%;
+}
+.w-1\/4{
+  width: 25%;
+}
+.w-1\/5{
+  width: 20%;
+}
+.w-\[21\%\]{
+  width: 21%;
+}
+.w-\[23\%\]{
+  width: 23%;
 }
 .flex-auto{
   flex: 1 1 auto;
 }
 .basis-full{
   flex-basis: 100%;
+}
+.grid-flow-row-dense{
+  grid-auto-flow: row dense;
+}
+.grid-flow-col-dense{
+  grid-auto-flow: column dense;
+}
+.grid-cols-4{
+  grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 .justify-between{
   justify-content: space-between;
@@ -467,11 +485,6 @@ h1 {
   margin-right: calc(0.75rem * var(--tw-space-x-reverse));
   margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
 }
-.space-x-7 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1.75rem * var(--tw-space-x-reverse));
-  margin-left: calc(1.75rem * calc(1 - var(--tw-space-x-reverse)));
-}
 .space-x-12 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
   margin-right: calc(3rem * var(--tw-space-x-reverse));
@@ -482,11 +495,10 @@ h1 {
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
-.rounded-lg{
-  border-radius: 0.5rem;
-}
-.rounded{
-  border-radius: 0.25rem;
+.space-x-4 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1rem * var(--tw-space-x-reverse));
+  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 .rounded-2xl{
   border-radius: 1rem;
@@ -494,8 +506,8 @@ h1 {
 .rounded-sm{
   border-radius: 0.125rem;
 }
-.border{
-  border-width: 1px;
+.rounded{
+  border-radius: 0.25rem;
 }
 .border-b-2{
   border-bottom-width: 2px;
@@ -507,14 +519,6 @@ h1 {
   --tw-border-opacity: 1;
   border-color: rgb(29 78 216 / var(--tw-border-opacity));
 }
-.bg-gray-100{
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}
-.bg-jgreen{
-  --tw-bg-opacity: 1;
-  background-color: rgb(5 160 129 / var(--tw-bg-opacity));
-}
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -525,9 +529,6 @@ h1 {
 }
 .bg-gray-50\/80{
   background-color: rgb(249 250 251 / 0.8);
-}
-.fill-white{
-  fill: #fff;
 }
 .p-4{
   padding: 1rem;
@@ -542,8 +543,9 @@ h1 {
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
-.pr-3{
-  padding-right: 0.75rem;
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 .pl-4{
   padding-left: 1rem;
@@ -554,8 +556,11 @@ h1 {
 .pr-8{
   padding-right: 2rem;
 }
-.text-left{
-  text-align: left;
+.pr-3{
+  padding-right: 0.75rem;
+}
+.pl-3{
+  padding-left: 0.75rem;
 }
 .text-center{
   text-align: center;
@@ -566,18 +571,6 @@ h1 {
 .font-nunito{
   font-family: 'Nunito Sans', sans-serif;
 }
-.text-lg{
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-.text-xl{
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-.text-base{
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
@@ -586,30 +579,31 @@ h1 {
   font-size: 2.25rem;
   line-height: 2.5rem;
 }
+.text-base{
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+.text-5xl{
+  font-size: 3rem;
+  line-height: 1;
+}
 .font-bold{
   font-weight: 700;
 }
 .font-semibold{
   font-weight: 600;
 }
-.italic{
-  font-style: italic;
-}
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
-.text-black{
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
-}
 .text-blue-700{
   --tw-text-opacity: 1;
   color: rgb(29 78 216 / var(--tw-text-opacity));
-}
-.shadow-gray-100\/50{
-  --tw-shadow-color: rgb(243 244 246 / 0.5);
-  --tw-shadow: var(--tw-shadow-colored);
 }
 .duration-300{
   transition-duration: 300ms;
@@ -679,11 +673,6 @@ h1 {
   background-color: rgb(5 160 129 / 0.2);
 }
 
-.hover\:text-gray-400:hover{
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
-}
-
 .hover\:text-white:hover{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -702,14 +691,14 @@ h1 {
   .sm\:visible{
     visibility: visible;
   }
+  .sm\:-right-20{
+    right: -5rem;
+  }
   .sm\:top-24{
     top: 6rem;
   }
   .sm\:left-0{
     left: 0px;
-  }
-  .sm\:-right-20{
-    right: -5rem;
   }
   .sm\:mx-4{
     margin-left: 1rem;
@@ -720,9 +709,6 @@ h1 {
   }
   .sm\:block{
     display: block;
-  }
-  .sm\:flex{
-    display: flex;
   }
   .sm\:hidden{
     display: none;
@@ -771,32 +757,22 @@ h1 {
 }
 
 @media (min-width: 425px){
-  .md\:-right-12{
-    right: -3rem;
-  }
-  .md\:-right-32{
-    right: -8rem;
-  }
   .md\:-right-36{
     right: -9rem;
   }
-  .md\:-right-52{
-    right: -13rem;
+  .md\:mx-3{
+    margin-left: 0.75rem;
+    margin-right: 0.75rem;
   }
-  .md\:-right-48{
-    right: -12rem;
+  .md\:mx-7{
+    margin-left: 1.75rem;
+    margin-right: 1.75rem;
   }
-  .md\:h-auto{
-    height: auto;
-  }
-  .md\:h-32{
-    height: 8rem;
+  .md\:hidden{
+    display: none;
   }
   .md\:w-2\/4{
     width: 50%;
-  }
-  .md\:basis-2\/4{
-    flex-basis: 50%;
   }
   .md\:flex-row{
     flex-direction: row;
@@ -812,17 +788,33 @@ h1 {
   .lg\:-right-52{
     right: -13rem;
   }
+  .lg\:left-3{
+    left: 0.75rem;
+  }
+  .lg\:left-24{
+    left: 6rem;
+  }
+  .lg\:left-44{
+    left: 11rem;
+  }
+  .lg\:mx-10{
+    margin-left: 2.5rem;
+    margin-right: 2.5rem;
+  }
   .lg\:block{
     display: block;
   }
-  .lg\:w-2\/4{
+  .lg\:w-2\/5{
+    width: 40%;
+  }
+  .lg\:w-2\/6{
+    width: 33.333333%;
+  }
+  .lg\:w-4\/6{
+    width: 66.666667%;
+  }
+  .lg\:w-3\/6{
     width: 50%;
-  }
-  .lg\:basis-2\/4{
-    flex-basis: 50%;
-  }
-  .lg\:flex-row{
-    flex-direction: row;
   }
   .lg\:text-lg{
     font-size: 1.125rem;
@@ -859,18 +851,24 @@ h1 {
   .xl\:top-97{
     top: 28rem;
   }
+  .xl\:top-11{
+    top: 2.75rem;
+  }
+  .xl\:top-14{
+    top: 3.5rem;
+  }
+  .xl\:top-24{
+    top: 6rem;
+  }
+  .xl\:top-32{
+    top: 8rem;
+  }
   .xl\:mx-24{
     margin-left: 6rem;
     margin-right: 6rem;
   }
-  .xl\:ml-5{
-    margin-left: 1.25rem;
-  }
   .xl\:ml-auto{
     margin-left: auto;
-  }
-  .xl\:block{
-    display: block;
   }
   .xl\:flex{
     display: flex;
@@ -878,8 +876,8 @@ h1 {
   .xl\:hidden{
     display: none;
   }
-  .xl\:w-1\/3{
-    width: 33.333333%;
+  .xl\:w-5\/12{
+    width: 41.666667%;
   }
   .xl\:w-80{
     width: 20rem;
@@ -887,17 +885,11 @@ h1 {
   .xl\:w-24{
     width: 6rem;
   }
-  .xl\:w-4\/12{
-    width: 33.333333%;
-  }
-  .xl\:w-5\/12{
-    width: 41.666667%;
-  }
-  .xl\:w-screen{
-    width: 100vw;
-  }
   .xl\:w-full{
     width: 100%;
+  }
+  .xl\:w-4\/12{
+    width: 33.333333%;
   }
   .xl\:space-x-7 > :not([hidden]) ~ :not([hidden]){
     --tw-space-x-reverse: 0;
@@ -933,10 +925,6 @@ h1 {
   .xl\:text-left{
     text-align: left;
   }
-  .xl\:text-lg{
-    font-size: 1.125rem;
-    line-height: 1.75rem;
-  }
   .xl\:text-xl{
     font-size: 1.25rem;
     line-height: 1.75rem;
@@ -945,14 +933,48 @@ h1 {
     font-size: 1rem;
     line-height: 1.5rem;
   }
+  .xl\:text-lg{
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+  .xl\:text-7xl{
+    font-size: 4.5rem;
+    line-height: 1;
+  }
+  .xl\:text-6xl{
+    font-size: 3.75rem;
+    line-height: 1;
+  }
+  .xl\:text-5xl{
+    font-size: 3rem;
+    line-height: 1;
+  }
+  .xl\:text-\[42px\]{
+    font-size: 42px;
+  }
+  .xl\:text-\[40px\]{
+    font-size: 40px;
+  }
   .xl\:font-bold{
     font-weight: 700;
   }
-  .xl\:font-semibold{
-    font-weight: 600;
-  }
   .xl\:italic{
     font-style: italic;
+  }
+  .xl\:leading-5{
+    line-height: 1.25rem;
+  }
+  .xl\:leading-10{
+    line-height: 2.5rem;
+  }
+  .xl\:leading-\[3rem\]{
+    line-height: 3rem;
+  }
+  .xl\:leading-\[4rem\]{
+    line-height: 4rem;
+  }
+  .xl\:leading-\[3\.4rem\]{
+    line-height: 3.4rem;
   }
   .xl\:text-white{
     --tw-text-opacity: 1;
@@ -969,5 +991,106 @@ h1 {
   .xl\:hover\:text-gray-400:hover{
     --tw-text-opacity: 1;
     color: rgb(156 163 175 / var(--tw-text-opacity));
+  }
+}
+
+@media (min-width: 1600px){
+  .\32xl\:top-44{
+    top: 11rem;
+  }
+  .\32xl\:top-\[800px\]{
+    top: 800px;
+  }
+  .\32xl\:top-\[600px\]{
+    top: 600px;
+  }
+  .\32xl\:top-\[700px\]{
+    top: 700px;
+  }
+  .\32xl\:flex{
+    display: flex;
+  }
+  .\32xl\:grid{
+    display: grid;
+  }
+  .\32xl\:hidden{
+    display: none;
+  }
+  .\32xl\:h-97{
+    height: 28rem;
+  }
+  .\32xl\:h-full{
+    height: 100%;
+  }
+  .\32xl\:h-100{
+    height: 40rem;
+  }
+  .\32xl\:w-3\/12{
+    width: 25%;
+  }
+  .\32xl\:w-1\/4{
+    width: 25%;
+  }
+  .\32xl\:w-4\/6{
+    width: 66.666667%;
+  }
+  .\32xl\:w-6\/12{
+    width: 50%;
+  }
+  .\32xl\:w-8\/12{
+    width: 66.666667%;
+  }
+  .\32xl\:w-7\/12{
+    width: 58.333333%;
+  }
+  .\32xl\:basis-1\/4{
+    flex-basis: 25%;
+  }
+  .\32xl\:basis-1\/6{
+    flex-basis: 16.666667%;
+  }
+  .\32xl\:flex-row{
+    flex-direction: row;
+  }
+  .\32xl\:flex-col{
+    flex-direction: column;
+  }
+  .\32xl\:flex-wrap{
+    flex-wrap: wrap;
+  }
+  .\32xl\:flex-nowrap{
+    flex-wrap: nowrap;
+  }
+  .\32xl\:pr-3{
+    padding-right: 0.75rem;
+  }
+  .\32xl\:pb-3{
+    padding-bottom: 0.75rem;
+  }
+  .\32xl\:text-\[40px\]{
+    font-size: 40px;
+  }
+  .\32xl\:text-\[43px\]{
+    font-size: 43px;
+  }
+  .\32xl\:text-lg{
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+  .\32xl\:text-xl{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+  .\32xl\:font-bold{
+    font-weight: 700;
+  }
+  .\32xl\:font-extrabold{
+    font-weight: 800;
+  }
+  .\32xl\:leading-\[3rem\]{
+    line-height: 3rem;
+  }
+  .\32xl\:leading-\[3\.5rem\]{
+    line-height: 3.5rem;
   }
 }
